--- a/technology.html
+++ b/technology.html
@@ -44,15 +44,15 @@
                         <!-- DMS 60도 측정 이미지 -->
                         <div class="dms-images-grid">
                             <div class="dms-image-container">
-                                <img src="images/dms_1.JPG" alt="차량 디지털 계기판 - DMS 시스템" />
+                                <img src="dms_1.JPG" alt="차량 디지털 계기판 - DMS 시스템" />
                                 <p class="dms-image-caption">차량 디지털 계기판 - DMS 시스템 작동 화면</p>
                             </div>
                             <div class="dms-image-container">
-                                <img src="images/dms_2.JPG" alt="DMS 60도 측정 - 나침반 앱을 통한 각도 확인" />
+                                <img src="dms_2.JPG" alt="DMS 60도 측정 - 나침반 앱을 통한 각도 확인" />
                                 <p class="dms-image-caption">DMS 60도 측정 - 나침반 앱을 통한 사이드미러 확인 각도 측정</p>
                             </div>
                             <div class="dms-image-container">
-                                <img src="images/dms_3.JPG" alt="DMS 60도 측정 - 차량 내부에서의 각도 확인" />
+                                <img src="dms_3.JPG" alt="DMS 60도 측정 - 차량 내부에서의 각도 확인" />
                                 <p class="dms-image-caption">차량 내부에서의 DMS 시선 추적 각도 측정 (60도 한계 확인)</p>
                             </div>
                         </div>
